work on introduction and results

--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -22,6 +22,8 @@
   \input{content/results/transport/void_to_absorber/description}
 \subsection{Skew Void-to-Absorber Test Problem\label{sec:skew_void_to_absorber}}
   \input{content/results/transport/skew_void_to_absorber/description}
+\subsection{Glance-in-Void Test Problem\label{sec:glance_in_void}}
+  \input{content/results/transport/glance_in_void/description}
 \subsection{Source Void-to-Absorber Test Problem\label{sec:source_void_to_absorber}}
   \input{content/results/transport/source_void_to_absorber/description}
 \subsection{Multi-Region Test Problem\label{sec:multi_region}}
@@ -31,3 +33,5 @@
 %===============================================================================
 \section{The Shallow Water Equations\label{sec:shallow_water_results}}
 %===============================================================================
+\subsection{Bathtub Test Problem\label{sec:bathtub}}
+  \input{content/results/shallowwater/bathtub/description}
