--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -2,6 +2,16 @@
 % Encoding: UTF-8
 
 
+@TechReport{IAEAFukushima,
+  Title                    = {The Fukushima Daiichi Accident},
+  Author                   = {Yukiya Amano},
+  Institution              = {International Atomic Energy Agency},
+  Year                     = {2015},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.03}
+}
+
 @Article{dealii,
   Title                    = {{deal.II} -- a General Purpose Object Oriented Finite Element Library},
   Author                   = {W. Bangerth and R. Hartmann and G. Kanschat},
@@ -172,6 +182,16 @@
   Year                     = {2015}
 }
 
+@Conference{hamilton,
+  Title                    = {Negative Flux Fixups in Discontinuous Finite Element SN Transport},
+  Author                   = {Steven Hamilton and Michele Benzi},
+  Booktitle                = {International Conference on Mathematics, Computational Methods \& Reactor Physics},
+  Year                     = {2009},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.03}
+}
+
 @PhdThesis{hansel,
   Title                    = {Application of the Entropy Viscosity Method and the Flux-Corrected Transport Algorithm to Scalar Transport Equations and the Shallow Water Equations},
   Author                   = {Joshua Hansel},
@@ -265,6 +285,18 @@
   Timestamp                = {2016.01.13}
 }
 
+@Article{lanthrop,
+  Title                    = {Spatial Differencing of the Transport Equation: Positivity vs. Accuracy},
+  Author                   = {K. D. Lanthrop},
+  Journal                  = {Journal of Computational Physics},
+  Year                     = {1969},
+  Pages                    = {475--498},
+  Volume                   = {4},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.03}
+}
+
 @Article{lellis2004,
   Title                    = {Minimal entropy conditions for Burgers equation},
   Author                   = {Camillo De Lellis and Felix Otto and Michael Westdickenberg},
@@ -282,6 +314,18 @@
   Year                     = {2002}
 }
 
+@Book{lewis,
+  Title                    = {Computational Methods of Neutron Transport},
+  Author                   = {E. E. Lewis and W. F. Miller},
+  Publisher                = {American Nuclear Society},
+  Year                     = {1993},
+
+  Address                  = {La Grange Park, IL},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.03}
+}
+
 @Article{long2014,
   Title                    = {The iterative thermal emission method: A more implicit modification of IMC},
   Author                   = {A. R. Long and N. A. Gentile and T. S. Palmer},
@@ -293,6 +337,30 @@
   Doi                      = {10.1016/j.jcp.2014.08.017},
   Owner                    = {joshua},
   Timestamp                = {2016.02.23}
+}
+
+@MastersThesis{maginot,
+  Title                    = {A Nonlinear Positive Extension of the Linear Discontinuous Spatial Discretization of the Transport Equation},
+  Author                   = {Peter Maginot},
+  School                   = {Texas A\&M University},
+  Year                     = {2010},
+  Month                    = {December},
+  Type                     = {Master's Thesis},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.03}
+}
+
+@Article{minor,
+  Title                    = {Exponential Characteristic Spatial Quadrature for Discrete Ordinates Radiation Transport with Rectangular Cells},
+  Author                   = {B. M. Minor and K. A. Matthews},
+  Journal                  = {Nuclear Science and Engineering},
+  Year                     = {1995},
+  Pages                    = {165--186},
+  Volume                   = {120},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.03}
 }
 
 @Article{panov1994,
@@ -328,6 +396,44 @@
   Doi                      = {http://dx.doi.org/10.1006/jcph.2002.7076},
   ISSN                     = {0021-9991},
   Url                      = {http://www.sciencedirect.com/science/article/pii/S0021999102970762}
+}
+
+@Article{walters_NC,
+  Title                    = {An Accurate, Strictly-Positive, Nonlinear Characteristic Scheme for the Discrete Ordinates Equations},
+  Author                   = {W. F. Walters and T. A. Wareing},
+  Journal                  = {Transport Theory and Statistical Physics},
+  Year                     = {1996},
+  Number                   = {2},
+  Pages                    = {197--215},
+  Volume                   = {25},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.03}
+}
+
+@Conference{walters,
+  Title                    = {A Nonlinear Positive Method for Solving the Transport Equation on Coarse Meshes},
+  Author                   = {Wallace F. Walters and Todd A. Wareing},
+  Booktitle                = {8th International Conference on Radiation Shielding},
+  Year                     = {1994},
+
+  Address                  = {Arlington, TX},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.03}
+}
+
+@Conference{wareing,
+  Title                    = {An Exponential Discontinuous Scheme for Discrete-Ordinate Calculations in Cartesian Geometries},
+  Author                   = {Todd A. Wareing},
+  Booktitle                = {Joint International Conference on Mathematical Methods and Supercomputing in Nuclear Applications},
+  Year                     = {1997},
+
+  Address                  = {Saratoga Springs, NY},
+
+  Institution              = {Los Alamos National Laboratory},
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.03}
 }
 
 @Article{zalesak,
