--- a/doc/dissertation/chapter1.tex
+++ b/doc/dissertation/chapter1.tex
@@ -2,5 +2,7 @@
 
 \section{Model Equations}
   \input{content/introduction/model_equations}
+\section{Previous Work on Obtaining Non-Negative Transport Solutions}
+  \input{content/introduction/transport_negativities}
 \section{Hyperbolic Conservation Law Equations}
   \input{content/introduction/hyperbolic_intro}
