fixed where old solution instead of old stage solution was used, and work on dissertation

--- a/doc/dissertation/abstract.tex
+++ b/doc/dissertation/abstract.tex
@@ -24,6 +24,6 @@ for scalar transport, Theta time discretizations and
 steady-state are considered. Explicit FCT schemes are shown to
 be relatively robust, but implicit/steady-state FCT schemes, however,
 are shown to have significant nonlinear convergence issues in many cases,
-as is noted by Kuzmin \cite{kuzmin_FCT}.
+as noted by Kuzmin \cite{kuzmin_FCT}.
 
 \pagebreak{}
