--- a/doc/dissertation/chapter1.tex
+++ b/doc/dissertation/chapter1.tex
@@ -1,8 +1,12 @@
 \chapter{INTRODUCTION}
 
-\section{Model Equations}
+\input{content/introduction/outline}
+\section{Model Equations\label{sec:model_equations_intro}}
   \input{content/introduction/model_equations}
-\section{Previous Work on Obtaining Non-Negative Transport Solutions}
+\section{Previous Work on Obtaining Non-Negative Transport Solutions
+  \label{sec:positive_transport}}
   \input{content/introduction/transport_negativities}
-\section{Hyperbolic Conservation Law Equations}
+\section{Previous Work on Mitigating Spurious Oscillations in Hyperbolic
+  Conservation Law Problems
+  \label{sec:hyperbolic_intro}}
   \input{content/introduction/hyperbolic_intro}
