--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -33,5 +33,7 @@
 %===============================================================================
 \section{The Shallow Water Equations\label{sec:shallow_water_results}}
 %===============================================================================
+\subsection{1-D Dam Break\label{sec:dam_break_1d}}
+  \input{content/results/shallowwater/dam_break_1d/description}
 \subsection{Bathtub Test Problem\label{sec:bathtub}}
   \input{content/results/shallowwater/bathtub/description}
