--- a/doc/dissertation/content/high_order/entropy_viscosity_system.tex
+++ b/doc/dissertation/content/high_order/entropy_viscosity_system.tex
@@ -1,7 +1,7 @@
 The entropy function for the shallow water equations is defined to be
 the sum of the kinetic and potential energy terms, in terms of the
 conservative variables and the bathymetry function $\bathymetry$:
-\begin{equation}
+\begin{equation}\label{eq:entropy_swe}
   \entropy(\vectorsolution,\bathymetry)
   = \half\frac{\heightmomentum\cdot\heightmomentum}
   {\height} + \half\gravity\height\pr{\height+\bathymetry}
