--- a/doc/dissertation/content/introduction/transport_negativities.tex
+++ b/doc/dissertation/content/introduction/transport_negativities.tex
@@ -19,4 +19,6 @@ are difficult to derive and implement and offers instead
 a nonlinear positive spatial differencing scheme called
 the exponential discontinuous scheme, which was applicable in 1-D,
 2-D, and 3-D cartesian meshes. More recently, Maginot has
-developed a consistent set-to-zero method for LD FEM \cite{maginot}.
+developed a consistent set-to-zero method for LD FEM \cite{maginot},
+as well as a non-negative, Bilinear Discontinuous (BLD) method
+\cite{maginot_mc2015}.
