--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -62,7 +62,8 @@ PDE   & partial differential equation\\
 RK    & Runge-Kutta\\
 SS    & steady-state\\
 SSPRK & strong stability-preserving Runge-Kutta\\
-SSPRK33 & 3-stage, 3-order-accurate SSPRK scheme, also known as the Shu-Osher method\\
+SSPRK33 & 3-stage, 3-order-accurate SSPRK scheme,\\
+        & also known as the Shu-Osher method\\
 \end{mytable}
 
 \begin{center}
