--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -339,6 +339,18 @@
   Timestamp                = {2016.02.23}
 }
 
+@Conference{maginot_mc2015,
+  Title                    = {A Non-Negative, Non-Linear Petrov-Galerkin Method for Bilinear Discontinuous Differencing of the Sn Equations},
+  Author                   = {Peter Maginot},
+  Booktitle                = {Joint International Conference on Mathematics and Computation, Supercomputing in Nuclear Applications, and the Monte Carlo Method (M\&C 2015)},
+  Year                     = {2015},
+
+  Address                  = {Nashville, TN},
+
+  Owner                    = {joshua},
+  Timestamp                = {2016.05.04}
+}
+
 @MastersThesis{maginot,
   Title                    = {A Nonlinear Positive Extension of the Linear Discontinuous Spatial Discretization of the Transport Equation},
   Author                   = {Peter Maginot},
