--- a/doc/dissertation/acknowledgements.tex
+++ b/doc/dissertation/acknowledgements.tex
@@ -25,9 +25,10 @@ of FCT methods over the years, whose works were essential in the development
 of the methodology used in this research. I would like to thank Dr. Dmitri Kuzmin
 for his responses in my questions about FCT.
 
-I would like to thank the U.S. Department of Energy for funding
-this research with the Nuclear Energy University Programs (NEUP)
-fellowship.
+I would like to thank those that provided funding for this reasearch:
+the U.S. Department of Energy, through the Nuclear Energy University
+Programs (NEUP) fellowship, and Idaho National Laboratory, which funded
+the last two semesters of research.
 
 Lastly, I would like to thank my friends and family for their love and support.
 
