--- a/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
+++ b/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
@@ -27,11 +27,23 @@ The coarsest mesh size in this study uses 8 cells, and each successive mesh
 size is halved, with the finest mesh in the study using 256 cells.
 
 Figure \ref{fig:mms_sinx_ss_solution} shows a comparison of the solutions with
-32 cells. Only the low-order (DMP) method does not match the exact solution
+32 cells, and Figure \ref{fig:mms_sinx_ss_visc} compares the viscosity
+profiles. Only the low-order (DMP) method does not match the exact solution
 well and suffers a defect at the outflow (right) boundary.
 The entropy viscosity and Galerkin FCT methods use the analytic solution bounds
 given by Equation \eqref{eq:analyticDMP_ss} with the antidiffusion bounds fix given by
-Equation \eqref{eq:antidiffusion_bounds_operation}. Since in the steady-state
+Equation \eqref{eq:antidiffusion_bounds_operation}:
+\[
+  \tilde{\antidiffusionbound}_i^-
+    \equiv \min(\antidiffusionbound_i^-, 0)
+  \eqc
+\]
+\[
+  \tilde{\antidiffusionbound}_i^+
+    \equiv \max(\antidiffusionbound_i^+, 0)
+  \eqp
+\]
+Since in the steady-state
 case the FCT solution bounds are implicit, the system is nonlinear and requires
 iteration. To produce the results that follow, the high-order solution was
 used as the initial guess in this iteration. It should be noted that for this
@@ -46,6 +58,15 @@ currently known.
         {\contentdir/results/transport/mms_sinx_ss/images/solution.pdf}
       \caption{Comparison of Solutions for Convergence Test Problem 1 with 32 Cells}
    \label{fig:mms_sinx_ss_solution}
+\end{figure}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{figure}[ht]
+   \centering
+      \includegraphics[width=\textwidth]
+        {\contentdir/results/transport/mms_sinx_ss/images/viscosity_SS.pdf}
+      \caption{Viscosity Profiles for Convergence Test Problem 1 with 32 Cells}
+   \label{fig:mms_sinx_ss_visc}
 \end{figure}
 %-------------------------------------------------------------------------------
 
